# qforensics-cxx

./: .clang-format  CMakeLists.txt  CMakeUserPresets.json  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  run.sh
models/: EvidenceTreeModel.cpp  EvidenceTreeModel.h
widgets/: DynamicContainer.cpp  DynamicContainer.h
